# LectureGenie

./: .gitignore  Home.py  README.md  add_title.py  extract_keyframes.py  fd_app.py  garbage_collector.py  genie.pem  key_frame_generation.py  processed_video.py  pyproject.toml  quiz_question_handler.py  requirements.txt  segment.py  setup.sh  start.sh  start_fd.sh  start_gc.sh  start_mp.sh  transcript.py  utils.py  video_playback.py  video_processor.py
.streamlit/: config.toml  secrets.toml
Transcript/: asrOutput.json
data/: data_science_full.json
examples/: transcription_times.json
flashcard_calls/: __init__.py  prompt.txt
frame_description_app/: __main__.py  desciption_generator.py  gemini.py
functionalities/flashcard_calls/: __init__.py
functionalities/quiz_questions/: exampleInfo.txt  quiz_frontend.py  quiz_generator.py
keyframe/: __main__.py  descriptor.py  graber.py
keyframe/prompts/: description_prompt.txt
notecard_generation/: notecard_generator.py
notecard_generation/prompts/: notecard.txt
pages/: 1_Video_Processing.py  1_Video_Quiz.py  2_Notes_Generator.py  2_Video_Quiz.py  3_Flashcard_Generator.py  3_Notes_Generator.py  4_Flashcard_Generator.py  4_View_Transcript.py
quiz_questions/: quiz_frontend.py  quiz_generator.py  utils.py
quiz_questions/prompts/: mq_prompt.txt  tf_prompt.txt
video_processing/: processed_video.py
video_processing/frontend/: __init__.py  keyframe_processing_frontend.py  login_frontend.py  transcribe_video_frontend.py  upload_video_frontend.py
video_processing/keyframe/: __main__.py  descriptor.py
(+9 files in other folders)
