[tool.poetry]
name = "lecturegenie"
version = "0.1.0"
description = ""
authors = ["Elan456 <telan4892@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.16"
streamlit = "^1.32.0"
flask = "^3.0.2"
opencv-python = "^4.9.0.80"
pydub = "^0.25.1"
matplotlib = "^3.8.3"
google-generativeai = "^0.4.0"
streamlit-extras = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
